Обновил - грамматические правки

--- a/example/index.html
+++ b/example/index.html
@@ -43,7 +43,7 @@
                     <span class="label label-default">complete</span>
                 </dd>
                 <dt>element</dt>
-                <dd>селектор формы, которую нужно проверять (только если в ей указан атрибут <b>action</b>).</dd>
+                <dd>селектор формы, которую нужно проверять (только если у неё указан атрибут <b>action</b>).</dd>
                 <dt>url</dt>
                 <dd>адрес, по которому нужно отслеживать запросы.</dd>
             </dl>
