--- a/example/index.html
+++ b/example/index.html
@@ -125,7 +125,7 @@
 </div>
 </body>
 <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="eventdog.js"></script>
+<script src="eventdog.min.js"></script>
 <script>
 
     eventdog.ajax({
