--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             min-width: 420px;
-            padding: 20px 0;
+            padding: 20px 0 50px 0;
         }
 
         .eventdog-img {
@@ -21,23 +21,65 @@
         .padding-top {
             padding-top: 50px;
         }
+        .tile-block{
+            border: 1px solid #010101;
+            padding: 15px;
+            min-height: 300px;
+            box-sizing: border-box;
+            border-radius: 4px;
+            margin: 15px 0;
+        }
+        .profits-lst li{
+            font-size: 21px;
+        }
+        .profits-lst{
+            font-size:  21px;
+        }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="col-lg-12 jumbotron">
-        <img src="eventdog.png" height="200" width="200" class="pull-left eventdog-img" title="Eventdog" alt="Eventdog">
+        <div class="col-md-3 text-center">
+            <img src="eventdog.png" height="200" width="200" class="eventdog-img" title="Eventdog" alt="Eventdog">
+        </div>
+        <div class="col-md-9">
+            <h1>EventDog.js </h1>
 
-        <h1>EventDog.js </h1>
+            <p>EventDog - это небольшой плагин, использующий jQuery, который отслеживает:</p>
+            <ul class="profits-lst">
+                <li><strong>ajax</strong> запросы</li>
+                <li>события: <strong>submit</strong>, <strong>change</strong>, <strong>click</strong> (submit и click - ставятся в приоритете вызова первыми, change - последним)</li>
+                <li>изменения в структуре и содержимом блоков (<strong>DOM</strong>)</li>
+            </ul>
+            <p>и вызывает нужную вам функцию (callback).</p>
+        </div>
 
-        <p>EventDog - это небольшой плагин, использующий jQuery, который отслеживает ajax запросы, submit форм, клики на
-            элементы, а так же изменения в
-            структуре и содержимом блоков и вызывает нужную вам функцию (callback).</p>
 
     </div>
 
     <h2 class="text-center padding-top">Использование</h2>
+    <div class="col-lg-6">
+        <h3 class="text-center">eventdog.dom:</h3>
+        <pre>
 
+            eventdog.dom({
+                element: '#test_p',
+                substring: $('#string_check_4').val(),
+                callback: function () {
+                    alert('Всё получилось!');
+                }
+            });
+        </pre>
+        <dl class="dl-horizontal">
+            <dt>callback</dt>
+            <dd>функция, которая вызывается при изменении элемента.</dd>
+            <dt>substring</dt>
+            <dd>строка, которую нужно в изменённом элемента.</dd><br>
+            <dt>element</dt>
+            <dd>селектор элемента, который нужно проверять.</dd>
+        </dl>
+    </div>
     <div class="col-lg-6">
         <h3 class="text-center">eventdog.ajax:</h3>
 
@@ -57,9 +99,9 @@
             <dt>callback</dt>
             <dd>функция, которая вызывается при событиях отправки или получения ajax запросов.</dd>
             <dt>substring</dt>
-            <dd>строка, которую нужно искать в ответе запроса.</dd>
+            <dd>строка, которую нужно искать в ответе запроса.</dd><br>
             <dt>events</dt>
-            <dd>события, пишутся через пробел. Могут быть:
+            <dd>события, пишутся через пробел. Могут быть:<br>
                 <span class="label label-primary">send</span>
                 <span class="label label-success">success</span>
                 <span class="label label-danger">error</span>
@@ -71,59 +113,36 @@
             <dd>адрес, по которому нужно отслеживать запросы.</dd>
         </dl>
     </div>
-
-    <div class="col-lg-6">
-        <h3 class="text-center">eventdog.submit:</h3>
+    <div class="col-lg-12">
+        <div class="col-lg-6">
+            <h3 class="text-center">eventdog.submit:</h3>
                 <pre>
 
             eventdog.submit({
-                element: '#form_test',
+                element: '#test_submit_form',
                 callback: function () {
-                    alert('Всё получилось!')
+                    alert('Eventdog: я стал первым!');
                 }
             });
                 </pre>
-        <dl class="dl-horizontal">
-            <dt>callback</dt>
-            <dd>функция, которая вызывается при отправке формы, при этом она ставится самая первая среди всех
-                обработчиков.
-            </dd>
-            <dt>element</dt>
-            <dd>селектор формы, на который нужно повесить обработчик
-            <dd>
-        </dl>
-    </div>
-
-    <div class="col-lg-12">
-        <div class="col-lg-6">
-            <h3 class="text-center">eventdog.dom:</h3>
-        <pre>
-
-            eventdog.dom({
-                element: '#test_p',
-                substring: $('#string_check_4').val(),
-                callback: function () {
-                    alert('Всё получилось!');
-                }
-            });
-        </pre>
             <dl class="dl-horizontal">
                 <dt>callback</dt>
-                <dd>функция, которая вызывается при изменении элемента.</dd>
-                <dt>substring</dt>
-                <dd>строка, которую нужно в изменённом элемента.</dd>
+                <dd>функция, которая вызывается при отправке формы, при этом она ставится самая первая среди всех
+                    обработчиков.
+                </dd>
                 <dt>element</dt>
-                <dd>селектор элемента, который нужно проверять.</dd>
+                <dd>селектор формы, на который нужно повесить обработчик.
+                <dd>
             </dl>
         </div>
-        <div class="col-lg-6 clear">
+        <div class="col-lg-6">
             <h3 class="text-center">eventdog.click:</h3>
         <pre>
 
             eventdog.click({
                 element: '#btn_click_test, #a_click_test',
                 callback: function () {
-                    alert('Всё получилось!')
+                    alert('Eventdog: я стал первым!');
                 }
             });
         </pre>
@@ -133,7 +152,28 @@
                     обработчиков.
                 </dd>
                 <dt>element</dt>
-                <dd>селектор элемента, на который нужно повесить обработчик
+                <dd>селектор элемента, на который нужно повесить обработчик.
+                <dd>
+            </dl>
+        </div>
+        <div class="col-lg-6 clear">
+            <h3 class="text-center">eventdog.change:</h3>
+        <pre>
+
+            eventdog.change({
+                element: '#string_check_6',
+                callback: function () {
+                    alert('Eventdog: пропущу всех вперёд :3');
+                }
+            });
+        </pre>
+            <dl class="dl-horizontal">
+                <dt>callback</dt>
+                <dd>функция, которая вызывается при изменении элемента (input, select, textarea), при этом она ставится самая последняя среди всех
+                    обработчиков.
+                </dd>
+                <dt>element</dt>
+                <dd>селектор элемента, на который нужно повесить обработчик.
                 <dd>
             </dl>
         </div>
@@ -143,81 +183,120 @@
     <div class="col-lg-12 padding-top">
         <h2 class="text-center">Примеры</h2>
 
-        <div class="col-lg-6">
-            <form action="server.php" method="get" id="form_test">
-                <h3>Проверка ajax</h3>
-
-                <div class="form-group">
-                    <label for="string_check_1">Строка, котора должна вернуться</label>
-                    <input type="text" class="form-control" id="string_check_1" name='string-check'
-                           placeholder="Введите текст">
-                </div>
-                <div class="form-group">
-                    <label for="string_check_2">Строка, которую нужно проверить</label>
-                    <input type="text" class="form-control" id="string_check_2" placeholder="Введите текст" disabled
-                           value="Ура!">
-                </div>
-                <button type="submit" class="btn btn-primary">Отправить</button>
-            </form>
-            <div class="form-group">
-                <h4>Ответ с сервера:</h4>
-
-                <p id="test_ajax"></p>
-            </div>
-        </div>
-        <div class="col-lg-6">
-            <h3>Проверка dom</h3>
-
-            <form id="form_test_2">
-                <div class="form-group">
-                    <label for="string_check_1">Строка, которую нужно вставить</label>
-                    <input type="text" class="form-control" id="string_check_3" name='string-check'
-                           placeholder="Введите текст">
-                </div>
-                <div class="form-group">
-                    <label for="string_check_2">Строка, которую нужно найти</label>
-                    <input type="text" class="form-control" id="string_check_4" placeholder="Введите текст" disabled
-                           value="Булочки!">
-                </div>
-                <button type="submit" class="btn btn-primary">Добавить</button>
-            </form>
-
-            <div class="form-group">
-                <p id="test_p">
-                    <br>Самым известным «рыбным» текстом является знаменитый Lorem ipsum. Считается, что впервые его
-                    применили в книгопечатании еще в XVI веке. Своим появлением Lorem ipsum обязан древнеримскому
-                    философу
-                    Цицерону, ведь именно из его трактата «О пределах добра и зла» средневековый книгопечатник вырвал
-                    отдельные фразы и слова, получив текст-«рыбу», широко используемый и по сей день. Конечно, возникают
-                    некоторые вопросы, связанные с использованием Lorem ipsum на сайтах и проектах, ориентированных на
-                    кириллический контент – написание символов на латыни и на кириллице значительно различается.</p>
-            </div>
-        </div>
 
         <div class="col-lg-12 no-padding">
-            <form id="test_submit_form" class="col-md-6 ">
-                <h3>Проверка submit</h3>
-                <p id="test_p_2">
-                    При клике кнопку происходит submit формы, при этом текстовое поле должно менять значение disabled.<br>
-                    Но так как мы используем <strong>eventdog.submit</strong>, то сначала сработает его функция callback, а уже после все остальные события.</p>
-                <div class="form-group">
-                    <label for="string_check_2">Строка, которую нужно найти</label>
-                    <input type="text" class="form-control" id="string_check_5" placeholder="Введите текст" value="Тут может быть любой текст">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit form</button>
-            </form>
-            <div class="col-md-6 ">
-                <h3>Проверка click</h3>
+            <div class="col-lg-6">
+                <div class="tile-block">
+                    <form action="server.php" method="get" id="form_test">
+                        <h3>Проверка ajax</h3>
 
-                <div class="form-group">
-                    <p id="test_p_3">
-                        При клике кнопку, должен измениться её цвет, а при клике по ссылке мы должны перейти на другую страницу.<br>
-                        Но так как мы используем <strong>eventdog.click</strong>, то сначала сработает его функция callback, а уже после все остальные события.</p>
+                        <div class="form-group">
+                            <label for="string_check_1">Строка, котора должна вернуться</label>
+                            <input type="text" class="form-control" id="string_check_1" name='string-check'
+                                   placeholder="Введите текст">
+                        </div>
+                        <div class="form-group">
+                            <label for="string_check_2">Строка, которую нужно проверить</label>
+                            <input type="text" class="form-control" id="string_check_2" placeholder="Введите текст"
+                                   disabled
+                                   value="Белка!">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Отправить</button>
+                    </form>
+                    <div class="form-group">
+                        <h4>Ответ с сервера:</h4>
+
+                        <p id="test_ajax"></p>
+                    </div>
                 </div>
-                <a href="http://git.cubeline.ru/cubeline/eventdog" id="a_click_test">Перейти на другую страницу</a><br><br>
-                <button type="submit" id="btn_click_test" class="btn btn-primary">Кликни на меня</button>
+            </div>
+            <div class="col-lg-6">
+                <div class="tile-block">
+                    <h3>Проверка dom</h3>
+
+                    <form id="form_test_2">
+                        <div class="form-group">
+                            <label for="string_check_1">Строка, которую нужно вставить</label>
+                            <input type="text" class="form-control" id="string_check_3" name='string-check'
+                                   placeholder="Введите текст">
+                        </div>
+                        <div class="form-group">
+                            <label for="string_check_2">Строка, которую нужно найти</label>
+                            <input type="text" class="form-control" id="string_check_4" placeholder="Введите текст"
+                                   disabled
+                                   value="Где белка!">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Добавить</button>
+                    </form>
+
+                    <div class="form-group">
+                        <p id="test_p">
+                            <br>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                            dolor.
+                            Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+                            ridiculus
+                            mus.
+                            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
+                            quis
+                            enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="col-lg-12 no-padding">
+            <form id="test_submit_form" class="col-md-6 ">
+                <div class="tile-block">
+                    <h3>Проверка submit</h3>
+
+                    <p id="test_p_2">
+                        При клике кнопку происходит submit формы, при этом текстовое поле должно менять значение
+                        disabled. Но так как мы используем <strong>eventdog.submit</strong>, то сначала сработает его
+                        функция callback, а уже после все остальные события.</p>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="string_check_5" placeholder="Введите текст"
+                               value="Тут может быть любой текст">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit form</button>
+                </div>
+            </form>
+            <div class="col-md-6 ">
+                <div class="tile-block">
+                    <h3>Проверка click</h3>
+
+                    <div class="form-group">
+                        <p id="test_p_3">
+                            При клике кнопку, должен измениться её цвет, а при клике по ссылке мы должны перейти на
+                            другую страницу.
+                            Но так как мы используем <strong>eventdog.click</strong>, то сначала сработает его функция
+                            callback, а уже после все остальные события.</p>
+                    </div>
+                    <a href="http://git.cubeline.ru/cubeline/eventdog" id="a_click_test">Перейти на другую
+                        страницу</a><br><br>
+                    <button type="submit" id="btn_click_test" class="btn btn-primary">Кликни на меня</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-12 no-padding">
+            <form id="test_change_form" class="col-md-6">
+                <div class="tile-block">
+                    <h3>Проверка change</h3>
+
+                    <p id="test_p_4">
+                        При клике кнопку происходит submit формы, при этом текстовое поле должно менять значение
+                        disabled.
+                        Но так как мы используем <strong>eventdog.submit</strong>, то сначала сработает его функция
+                        callback, а уже после все остальные события.</p>
+
+                    <div class="form-group">
+                        <label for="string_check_2">Введите любой текст</label>
+                        <input type="text" class="form-control" id="string_check_6" placeholder="Введите текст"
+                               value="">
+                    </div>
+                </div>
+            </form>
+        </div>
+
     </div>
 </div>
 </body>
@@ -230,10 +309,10 @@
         var $this = $(this);
         e.preventDefault();
         $.post($this.attr('action'), $this.serialize())
-            .done(function (data) {
-                data = JSON.stringify($.parseJSON(data));
-                $('#test_ajax').text(data);
-            });
+                .done(function (data) {
+                    data = JSON.stringify($.parseJSON(data));
+                    $('#test_ajax').text(data);
+                });
     });
 
     // DOM group
@@ -242,13 +321,12 @@
         $('#test_p').html($('#test_p').html() + $('#string_check_3').val());
     });
     // Submit group
-    $('#test_submit_form').on('submit', function(e){
+    $('#test_submit_form').on('submit', function (e) {
         e.preventDefault();
         var $input = $('#string_check_5');
-        console.log($input.attr('disabled'));
-        if($input.attr('disabled')){
+        if ($input.attr('disabled')) {
             $input.attr('disabled', false);
-        }else{
+        } else {
             $input.attr('disabled', true);
         }
         alert('Обработчик формы: я должен был быть первым :(');
@@ -262,18 +340,29 @@
         alert('Обработчик ссылки: я должен был быть первым :(');
     });
 
+    // Change
+    $('#string_check_6').on('change', function () {
+        $(this).parent().toggleClass('has-success');
+    });
 
     eventdog.click({
         element: '#btn_click_test, #a_click_test',
         callback: function () {
-            alert('Eventdog: я сработал первый!');
+            alert('Eventdog: я стал первым!');
         }
     });
 
     eventdog.submit({
         element: '#test_submit_form',
         callback: function () {
-            alert('Eventdog: я сработал первый!');
+            alert('Eventdog: я стал первым!');
+        }
+    });
+
+    eventdog.change({
+        element: '#string_check_6',
+        callback: function () {
+            alert('Eventdog: пропущу всех вперёд! Гаф! :3');
         }
     });
 
@@ -294,6 +383,13 @@
         }
     });
 
+    // Change
+    $('#string_check_6').on('change', function () {
+        var $this = $(this);
+        $this.val($this.val() + ' бла бла')
+    }).on('change', function () {
+        alert('Обработчик input: хочу выполнится первым!');
+    });
 </script>
 
 </html>
